source formatting git ignore build files : they will exit with status code 1 when there is a compilation error clean files : they ignore non-existent files (error output from rm is redirected to /dev/null) moved code from Transaction into separate source file added stopwatch source files lib/column_operators/CMakeLists.txt : this file is just an attempt to use cmake + clang++ which did not work yet

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@
 /nbproject/private
 /tools/sample/main
 *.swp
+lib/column_storage/Transaction.o
+lib/libutil.a
+lib/util/libutil.a
+lib/util/stopwatch.o
