--- a/lib/build
+++ b/lib/build
@@ -1,8 +1,8 @@
 #!/bin/bash
 
-for p in column_operators column_storage meta_repository; do
+for p in column_operators column_storage meta_repository util; do
 	pushd $p
-	./build
+	./build || exit 1
 	popd
 done
-
+exit 0
