--- a/lib/meta_repository/build
+++ b/lib/meta_repository/build
@@ -6,10 +6,11 @@ FILES=(MetaRepositoryManager)
 CD=`pwd | sed 's#.*/##'`
 
 for f in "${FILES[@]}"; do
-        clang++ -I/home/tk4/git/columnstore/lib -I/home/tk4/git/columnstore/include `llvm-config --cxxflags` -std=c++14 -c $f.cpp -o $f.o
+        clang++ -I/home/tk4/git/columnstore/lib -I/home/tk4/git/columnstore/include `llvm-config --cxxflags` -std=c++14 -c $f.cpp -o $f.o || exit 1
 done
 
 ar cru ${LIBFILE} "${FILES[@]/%/.o}"
 ranlib ${LIBFILE}
 ln -sf ${CD}/${LIBFILE} ../${LIBFILE}
 
+exit 0
