--- a/lib/util/build
+++ b/lib/util/build
@@ -1,15 +1,14 @@
 #!/bin/bash
 
-LIB=column_operators
+LIB=util
 LIBFILE=lib${LIB}.a
-FILES=(operators)
+FILES=(stopwatch)
 CD=`pwd | sed 's#.*/##'`
 
 for f in "${FILES[@]}"; do
         clang++ -I/home/tk4/git/columnstore/lib -I/home/tk4/git/columnstore/include `llvm-config --cxxflags` -std=c++14 -c $f.cpp -o $f.o || exit 1
 done
 
-#libtool -static operators.o -o liboperators.a
 ar cru ${LIBFILE} "${FILES[@]/%/.o}"
 ranlib ${LIBFILE}
 ln -sf ${CD}/${LIBFILE} ../${LIBFILE}
