--- a/tools/sample/build
+++ b/tools/sample/build
@@ -1,4 +1,5 @@
 #!/bin/bash
 
-clang++ -I/home/tk4/git/columnstore/lib -I/home/tk4/git/columnstore/include `llvm-config --cxxflags` -std=c++14 main.cpp -o main -v `llvm-config --ldflags` -L/home/tk4/git/columnstore/lib `llvm-config --libs` -lcolumn_operators -lcolumn_storage -lmeta_repository -lffi -ldl -lpthread -lcurses
+clang++ -I/home/tk4/git/columnstore/lib -I/home/tk4/git/columnstore/include `llvm-config --cxxflags` -std=c++14 main.cpp -o main -v `llvm-config --ldflags` -L/home/tk4/git/columnstore/lib `llvm-config --libs` -lcolumn_operators -lcolumn_storage -lmeta_repository -lutil -lffi -ldl -lpthread -lcurses -lboost_system -lboost_filesystem || exit 1
 
+exit 0
