build file : create release (.o .a) files and debug (_dbg.o _dbg.a) files move type definitions to ColumnStore.h to make it easily available to all other files operators.h : add function to copy an int-column to a resint-column TransactionManager.h : allow to define delimiter(s) for load files (not only "|") MetaRepositoryMaanger.h : type defs removed resilience : added header and source file Transaction.cpp :   * allow different delimiters in load()   * replace some hard-coded numbers for lengths with a static constant (more to go)   * fix when tableName is nullptr, that we do not create a table   * load does now multiply A onto values when column type is resint_t main.cpp :   * test new copyA function from Transaction   * comment out some stuff for testing

--- a/lib/column_operators/build
+++ b/lib/column_operators/build
@@ -1,17 +1,24 @@
 #!/bin/bash
 
 LIB=column_operators
-LIBFILE=lib${LIB}.a
+LIBFILE_R=lib${LIB}.a
+LIBFILE_D=lib${LIB}_dbg.a
 FILES=(operators)
 CD=`pwd | sed 's#.*/##'`
 
 for f in "${FILES[@]}"; do
-        clang++ -I/home/tk4/git/columnstore/lib -I/home/tk4/git/columnstore/include `llvm-config --cxxflags` -std=c++14 -c $f.cpp -o $f.o || exit 1
+    clang++ -I/home/tk4/git/columnstore/lib -I/home/tk4/git/columnstore/include `llvm-config --cxxflags` -g3 -O0 -fcxx-exceptions -std=c++14 -c $f.cpp -o ${f}_dbg.o || exit 1
+    clang++ -I/home/tk4/git/columnstore/lib -I/home/tk4/git/columnstore/include `llvm-config --cxxflags` -O3 -fcxx-exceptions -std=c++14 -c $f.cpp -o ${f}.o || exit 1
 done
 
-#libtool -static operators.o -o liboperators.a
-ar cru ${LIBFILE} "${FILES[@]/%/.o}"
-ranlib ${LIBFILE}
-ln -sf ${CD}/${LIBFILE} ../${LIBFILE}
+#Release
+ar cru ${LIBFILE_R} "${FILES[@]/%/.o}"
+ranlib ${LIBFILE_R}
+ln -sf ${CD}/${LIBFILE_R} ../${LIBFILE_R}
+
+#Debug
+ar cru ${LIBFILE_D} "${FILES[@]/%/_dbg.o}"
+ranlib ${LIBFILE_D}
+ln -sf ${CD}/${LIBFILE_D} ../${LIBFILE_D}
 
 exit 0
