--- a/tools/sample/build
+++ b/tools/sample/build
@@ -1,5 +1,7 @@
 #!/bin/bash
 
-clang++ -I/home/tk4/git/columnstore/lib -I/home/tk4/git/columnstore/include `llvm-config --cxxflags` -std=c++14 main.cpp -o main -v `llvm-config --ldflags` -L/home/tk4/git/columnstore/lib `llvm-config --libs` -lcolumn_operators -lcolumn_storage -lmeta_repository -lutil -lffi -ldl -lpthread -lcurses -lboost_system -lboost_filesystem || exit 1
+clang++ -I/home/tk4/git/columnstore/lib -I/home/tk4/git/columnstore/include `llvm-config --cxxflags` -O3 -std=c++14 main.cpp -o main `llvm-config --ldflags` -L/home/tk4/git/columnstore/lib `llvm-config --libs` -lcolumn_operators -lcolumn_storage -lmeta_repository -lutil -lffi -ldl -lpthread -lcurses -lboost_system -lboost_filesystem || exit 1
+
+clang++ -I/home/tk4/git/columnstore/lib -I/home/tk4/git/columnstore/include `llvm-config --cxxflags` -g3 -O0 -std=c++14 main.cpp -o main_dbg `llvm-config --ldflags` -L/home/tk4/git/columnstore/lib `llvm-config --libs` -lcolumn_operators_dbg -lcolumn_storage_dbg -lmeta_repository_dbg -lutil_dbg -lffi -ldl -lpthread -lcurses -lboost_system -lboost_filesystem || exit 1
 
 exit 0
