--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
-/database
-/nbproject/private
-/tools/sample/main
 *.swp
 *.a
 *.o
+*.out
+*_dbg
+/database
+/nbproject/private
+/tools/sample/main
+/tools/sample/ssbm-q01
+/tools/sample/ssbm-q01_eager
