--- a/tools/sample/build
+++ b/tools/sample/build
@@ -8,7 +8,9 @@ fi
 BASEDIR="$1"
 
 for file in main ssbm-q01 ssbm-q01_eager ssbm-q01_lazy lineorder_size; do
+    echo "${file}: "
     clang++ -I${BASEDIR}/lib -I${BASEDIR}/include `llvm-config --cxxflags` -fcxx-exceptions -O3 -DNDEBUG -std=c++14 ${file}.cpp -o ${file} `llvm-config --ldflags` -L${BASEDIR}/lib `llvm-config --libs` -lcolumn_operators -lcolumn_storage -lmeta_repository -lutil -lffi -ldl -lpthread -lcurses -lboost_system -lboost_filesystem || exit 1
+    echo "${file}_dbg: "
     clang++ -I${BASEDIR}/lib -I${BASEDIR}/include `llvm-config --cxxflags` -fcxx-exceptions -g3 -O0 -std=c++14 ${file}.cpp -o ${file}_dbg `llvm-config --ldflags` -L${BASEDIR}/lib `llvm-config --libs` -lcolumn_operators_dbg -lcolumn_storage_dbg -lmeta_repository_dbg -lutil_dbg -lffi -ldl -lpthread -lcurses -lboost_system -lboost_filesystem || exit 1
 done
 
