--- a/tools/build
+++ b/tools/build
@@ -6,8 +6,9 @@ if [[ $# -ne 1 ]]; then
 fi
 
 BASEDIR="$1"
+DIRS=(sample)
 
-for p in sample; do
+for p in "${DIRS[@]}"; do
 	pushd $p
 	./build "${BASEDIR}" || exit 1
 	popd
