--- a/tools/sample/build
+++ b/tools/sample/build
@@ -6,8 +6,9 @@ if [[ $# -ne 1 ]]; then
 fi
 
 BASEDIR="$1"
+FILES=(main ssbm-q01 ssbm-q01_eager ssbm-q01_lazy ssbm-q01_encoded lineorder_size)
 
-for file in main ssbm-q01 ssbm-q01_eager ssbm-q01_lazy lineorder_size; do
+for file in "${FILES[@]}"; do
     echo "${file}: "
     clang++ -I${BASEDIR}/lib -I${BASEDIR}/include `llvm-config --cxxflags` -fcxx-exceptions -O3 -DNDEBUG -std=c++14 ${file}.cpp -o ${file} `llvm-config --ldflags` -L${BASEDIR}/lib `llvm-config --libs` -lcolumn_operators -lcolumn_storage -lmeta_repository -lutil -lffi -ldl -lpthread -lcurses -lboost_system -lboost_filesystem || exit 1
     echo "${file}_dbg: "
