Running implementation of TypeSelector<> which uses the v2_* types which are unions to have explicitly different types TypeSelector<> allows AN-operators to automatically select the correct types (base, resilient, BAT, ...)
moved the printing of the headlines and result lines in the queries into ssbm.hpp for unified definition/look

--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,5 @@
 /tools/sample/ssbm-q01
 /tools/sample/ssbm-q01_eager
 /tools/sample/ssbm-q01_lazy
+/tools/sample/ssbm-q01_encoded
 /tools/sample/lineorder_size
