AN-encoded hashjoin ! Finally! yay! :-D It generates a tuple of a BAT* and 2 vector<bool>* renamed largeint -> bigint renamed AN operators from ***A -> ***_AN some more restructuring added a slightly faster hashjoin implementation (no dynamic vector object allocation, but in-place instances which are automatically garbage-collected through the map)

--- a/tools/sample/build
+++ b/tools/sample/build
@@ -6,7 +6,7 @@ if [[ $# -ne 1 ]]; then
 fi
 
 BASEDIR="$1"
-FILES=(main ssbm-q01 ssbm-q01_eager ssbm-q01_lazy ssbm-q01_encoded lineorder_size)
+FILES=(test_hashjoin main ssbm-q01 ssbm-q01_eager ssbm-q01_lazy ssbm-q01_encoded lineorder_size)
 
 for file in "${FILES[@]}"; do
     echo "${file}: "
