--- a/build
+++ b/build
@@ -11,10 +11,12 @@ done
 BASEDIR="$( cd -P "$( dirname "$SOURCE" )" && pwd )"
 # END FROM
 
+DIRS=(lib tools)
+
 pushd ${BASEDIR}
-for p in lib tools; do
+for p in "${DIRS[@]}"; do
 	pushd $p
-	./build "${BASEDIR}" || exit 1
+	./build || exit 1
 	popd
 done
 popd
