--- a/lib/build
+++ b/lib/build
@@ -1,16 +1,10 @@
 #!/bin/bash
 
-if [[ $# -ne 1 ]]; then
-    echo "build script must be called with single parameter <base path of git repository>"
-    exit 1
-fi
-
-BASEDIR="$1"
-DIRS=(column_operators column_storage meta_repository util)
+DIRS=(column_storage meta_repository util)
 
 for p in "${DIRS[@]}"; do
 	pushd $p
-	./build "${BASEDIR}" || exit 1
+	./build || exit 1
 	popd
 done
 
