--- a/tools/build
+++ b/tools/build
@@ -1,16 +1,10 @@
 #!/bin/bash
 
-if [[ $# -ne 1 ]]; then
-    echo "build script must be called with single parameter <base path of git repository>"
-    exit 1
-fi
-
-BASEDIR="$1"
-DIRS=(sample)
+DIRS=(sample ssbm)
 
 for p in "${DIRS[@]}"; do
 	pushd $p
-	./build "${BASEDIR}" || exit 1
+	./build || exit 1
 	popd
 done
 
