--- a/tools/sample/build
+++ b/tools/sample/build
@@ -1,5 +1,7 @@
 #!/bin/bash
 
+# define variable "DEBUG=1" to enable debug builds
+
 BASEDIR="../.."
 FILES=(test_hashjoin main lineorder_size)
 COMP="g++"
@@ -14,8 +16,10 @@ CXXLIBS=
 for file in "${FILES[@]}"; do
     echo "${file}: "
     ${COMP} -I${BASEDIR}/lib -I${BASEDIR}/include ${COMPFLAGS} -g0 -O3 -std=c++14 -DNDEBUG ${file}.cpp -o ${file} ${LDFLAGS} -L${BASEDIR}/lib ${CXXLIBS} -lcolumn_storage -lmeta_repository -lutil -lffi -ldl -lpthread -lcurses -lboost_system -lboost_filesystem || exit 1
-    echo "${file}_dbg: "
-    ${COMP} -I${BASEDIR}/lib -I${BASEDIR}/include ${COMPFLAGS} -g3 -O2 -std=c++14 ${file}.cpp -o ${file}_dbg  ${LDFLAGS} -L${BASEDIR}/lib ${CXXLIBS} -lcolumn_storage_dbg -lmeta_repository_dbg -lutil_dbg -lffi -ldl -lpthread -lcurses -lboost_system -lboost_filesystem || exit 1
+    if [[ $DEBUG -ne 0 ]]; then
+        echo "${file}_dbg: "
+        ${COMP} -I${BASEDIR}/lib -I${BASEDIR}/include ${COMPFLAGS} -g3 -O2 -std=c++14 ${file}.cpp -o ${file}_dbg  ${LDFLAGS} -L${BASEDIR}/lib ${CXXLIBS} -lcolumn_storage_dbg -lmeta_repository_dbg -lutil_dbg -lffi -ldl -lpthread -lcurses -lboost_system -lboost_filesystem || exit 1
+    fi
 done
 
 exit 0
