--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,11 @@
 /tools/ssbm/ssbm-q11_eager
 /tools/ssbm/ssbm-q11_lazy
 /tools/ssbm/ssbm-q11_encoded
+/tools/ssbm/ssbm-q12
+/tools/ssbm/ssbm-q12_eager
+/tools/ssbm/ssbm-q12_lazy
+/tools/ssbm/ssbm-q12_encoded
+/tools/ssbm/ssbm-q13
+/tools/ssbm/ssbm-q13_eager
+/tools/ssbm/ssbm-q13_lazy
+/tools/ssbm/ssbm-q13_encoded
