remove some unnecessary code in Q1.1 variants add first Q1.3 variant

--- a/tools/ssbm/build
+++ b/tools/ssbm/build
@@ -3,7 +3,8 @@
 # define variable "DEBUG=1" to enable debug builds
 
 BASEDIR="../.."
-FILES=(ssbm-q11 ssbm-q11_eager ssbm-q11_lazy ssbm-q11_encoded ssbm-q12 ssbm-q12_eager ssbm-q12_lazy ssbm-q12_encoded)
+FILES=(ssbm-q11 ssbm-q11_eager ssbm-q11_lazy ssbm-q11_encoded ssbm-q12 ssbm-q12_eager ssbm-q12_lazy ssbm-q12_encoded ssbm-q13)
+#FILES=(ssbm-q13)
 COMP="g++"
 COMPFLAGS=-fexceptions
 LDFLAGS=
