cmake build system

--- a/.gitignore
+++ b/.gitignore
@@ -6,20 +6,13 @@
 *_dbg
 *.result
 *.summary
+Makefile
+cmake_install.cmake
+CMakeCache.txt
+CMakeFiles
+/build/lineorder_size
+/build/main
+/build/test_hashjoin
+/build/ssbm*
 /database
 /nbproject/private
-/tools/sample/lineorder_size
-/tools/sample/main
-/tools/sample/test_hashjoin
-/tools/ssbm/ssbm-q11
-/tools/ssbm/ssbm-q11_eager
-/tools/ssbm/ssbm-q11_lazy
-/tools/ssbm/ssbm-q11_encoded
-/tools/ssbm/ssbm-q12
-/tools/ssbm/ssbm-q12_eager
-/tools/ssbm/ssbm-q12_lazy
-/tools/ssbm/ssbm-q12_encoded
-/tools/ssbm/ssbm-q13
-/tools/ssbm/ssbm-q13_eager
-/tools/ssbm/ssbm-q13_lazy
-/tools/ssbm/ssbm-q13_encoded
