fix cmake files (CMakeLists.txt) complete Query 1.3 fix many things in the other queries checkAndDecodeAN now returns a tuple with 5 elements: 0=bat, 1,2=vector<bool>*'s for encoded heads / tails (or null otherwise) added macros in ssbm.h to delete the vector<bool>*'s returned by the *AN-operators (with proper nullptr-checks) run.sh now prints to stdout the current state

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -8,12 +8,6 @@ ELSE()
     PROJECT(V2TOOLS LANGUAGES CXX)
 ENDIF()
 
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wall -Wextra ${MACHINE_TYPE_FLAG} -march=native -fexceptions -fnon-call-exceptions")
-#SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -DDEBUG -rdynamic -g")
-#SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -DNDEBUG")
-SET(CMAKE_CXX_FLAGS_PROFILEGENERATE "${CMAKE_CXX_FLAGS_PROFILEGENERATE} -O0 -DDEBUG -rdynamic -g -pg -fprofile-generate")
-SET(CMAKE_CXX_FLAGS_PROFILEUSE "${CMAKE_CXX_FLAGS_PROFILEUSE} -O3 -DNDEBUG -fprofile-use")
-
 MACRO( add_algorithm arg_name arg_path )
     FILE(GLOB SOURCE_FILES
         "${arg_path}/${arg_name}.cpp")
@@ -36,12 +30,4 @@ MACRO(add_ssbm arg_queries)
     ENDFOREACH(Q QUERIES)
 ENDMACRO(add_ssbm)
 
-#add_algorithm(ssbm-q11           "ssbm")
-#add_algorithm(ssbm-q11_eager     "ssbm")
-#add_algorithm(ssbm-q11_encoded   "ssbm")
-#add_algorithm(ssbm-q11_lazy      "ssbm")
-#add_algorithm(ssbm-q12           "ssbm")
-#add_algorithm(ssbm-q12_eager     "ssbm")
-#add_algorithm(ssbm-q12_encoded   "ssbm")
-#add_algorithm(ssbm-q12_lazy      "ssbm")
-add_ssbm("ssbm-q11 ssbm-q11_eager ssbm-q11_lazy ssbm-q11_encoded ssbm-q12 ssbm-q12_eager ssbm-q12_lazy ssbm-q12_encoded ssbm-q13")
+add_ssbm("ssbm-q11 ssbm-q11_eager ssbm-q11_lazy ssbm-q11_encoded ssbm-q12 ssbm-q12_eager ssbm-q12_lazy ssbm-q12_encoded ssbm-q13 ssbm-q13_eager ssbm-q13_lazy ssbm-q13_encoded")
