fixed all warnings given by -Weffc++. there remain only "unused variable" warnings in the AN-coded hashjoin. TODO:     * introduce AN-hashjoin variant which handles different A's     * introduce AN-operator variants which encode the intermediate result with another A     * we could need a hashjoin variant which takes care of v2_void_t data types (if necessary) which allows nice shortcuts.         + e.g. if one of the actual join columns is a v2_void_t then we only need to know the bounds and need not hash at all (just probe the other side against these bounds)         + v2_void_t may have to be converted to v2_resoid_t implicitly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 # author: Till Kolditz (C) 2016 Till.Kolditz@TU-Dresden.de
 
-CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
+CMAKE_MINIMUM_REQUIRED(VERSION 3.1 FATAL_ERROR)
+
 IF(POLICY CMP0048)
     CMAKE_POLICY(SET CMP0048 NEW)
     PROJECT(V2ROOT VERSION 0.5 LANGUAGES CXX)
@@ -20,14 +21,14 @@ ELSE()
     SET(CMAKE_BUILD_TYPE Release)
 ENDIF()
 
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wall ${MACHINE_TYPE_FLAG} -march=native -fexceptions -fnon-call-exceptions")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native -Wall -Wextra -Weffc++ -march=native -fexceptions -fnon-call-exceptions")
 #SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -DDEBUG -rdynamic -g")
 #SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -DNDEBUG")
 # see
 # http://stackoverflow.com/questions/11437692/how-to-add-a-custom-build-type-to-cmake-targetting-make
 # for adding custom build types
-SET(CMAKE_CXX_FLAGS_PROFILEGENERATE "${CMAKE_CXX_FLAGS_PROFILEGENERATE} -O0 -DDEBUG -rdynamic -g -pg -fprofile-generate")
-SET(CMAKE_CXX_FLAGS_PROFILEUSE "${CMAKE_CXX_FLAGS_PROFILEUSE} -O3 -DNDEBUG -fprofile-use")
+#SET(CMAKE_CXX_FLAGS_PROFILEGENERATE "${CMAKE_CXX_FLAGS_PROFILEGENERATE} -O0 -DDEBUG -rdynamic -g -pg -fprofile-generate")
+#SET(CMAKE_CXX_FLAGS_PROFILEUSE "${CMAKE_CXX_FLAGS_PROFILEUSE} -O3 -DNDEBUG -fprofile-use")
 
 INCLUDE_DIRECTORIES("${PROJECT_INCLUDE_DIR}")
 
