--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,6 +1,7 @@
 # author: Till Kolditz (C) 2016 Till.Kolditz@TU-Dresden.de
 
-CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
+CMAKE_MINIMUM_REQUIRED(VERSION 3.1 FATAL_ERROR)
+
 IF(POLICY CMP0048)
     CMAKE_POLICY(SET CMP0048 NEW)
     PROJECT(V2LIB VERSION 0.5 LANGUAGES CXX)
@@ -18,6 +19,8 @@ MACRO( add_static_lib arg_name arg_source_files arg_dep_libs )
 
     MESSAGE(STATUS "Add static library ${LIBNAME}")
     ADD_LIBRARY(${LIBNAME} STATIC ${SOURCE_FILES})
+    SET_PROPERTY(TARGET ${LIBNAME} PROPERTY CXX_STANDARD 14)
+    SET_PROPERTY(TARGET ${LIBNAME} PROPERTY CXX_STANDARD_REQUIRED ON)
     TARGET_LINK_LIBRARIES(${LIBNAME} ffi dl pthread curses boost_system boost_filesystem)
 ENDMACRO( add_static_lib )
 
