add groupBy operator and groupedSum (which groups over 2 columns add sums up a third one) ColumnBatIterator: make template parameter for Head column generic (instead of only v2_void_t) CMakeLists.txt: add test_group from sample

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -25,6 +25,7 @@ MESSAGE(STATUS "link directory: ${LIBRARY_OUTPUT_PATH}")
 add_algorithm(main               "sample")
 add_algorithm(lineorder_size     "sample")
 add_algorithm(test_hashjoin      "sample")
+add_algorithm(test_group         "sample")
 
 MACRO(add_ssbm arg_queries)
     STRING(REPLACE " " ";" QUERIES "${arg_queries}")
