add selection for v2_str_t and v2_cstr_t BATs (introduces for all v2_* types another typedef v2_compare_t) add SSBM Query 2.1 add license text to some files slightly improve output for all queries

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,9 @@ CMakeFiles
 /nbproject/private
 /eval/data
 /eval/out
+/eval/outNewHashjoin1/
+/eval/outNewHashjoin2/
+/eval/dataOldHashjoin/
+/eval/outOldHashjoin/
+/eval/dataNewHashjoin1/
+/eval/dataNewHashjoin2/
