meta data is stored in column descriptors (especially AN parameters) first step towards re-encoding during query adapted many many places to take care of the metaData (also, Transaction::load() and ColumnBAT) All BATs have ColumnDescriptors for head and tail source format

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -22,10 +22,10 @@ ENDMACRO( add_algorithm )
 MESSAGE("Generating make scripts for ${PROJECT_NAME} in ${CMAKE_BUILD_TYPE} mode")
 MESSAGE(STATUS "link directory: ${LIBRARY_OUTPUT_PATH}")
 
-add_algorithm(main               "sample")
-add_algorithm(lineorder_size     "sample")
-add_algorithm(test_hashjoin      "sample")
-add_algorithm(test_group         "sample")
+#add_algorithm(main               "sample")
+#add_algorithm(lineorder_size     "sample")
+#add_algorithm(test_hashjoin      "sample")
+#add_algorithm(test_group         "sample")
 
 MACRO(add_ssbm arg_queries)
     STRING(REPLACE " " ";" QUERIES "${arg_queries}")
@@ -34,4 +34,5 @@ MACRO(add_ssbm arg_queries)
     ENDFOREACH(Q QUERIES)
 ENDMACRO(add_ssbm)
 
-add_ssbm("ssbm-q11 ssbm-q11_early ssbm-q11_late ssbm-q11_continuous ssbm-q12 ssbm-q12_early ssbm-q12_late ssbm-q12_continuous ssbm-q13 ssbm-q13_early ssbm-q13_late ssbm-q13_continuous ssbm-q21 ssbm-q21_early ssbm-q21_late ssbm-q21_continuous")
+#add_ssbm("ssbm-q11 ssbm-q11_early ssbm-q11_late ssbm-q11_continuous ssbm-q12 ssbm-q12_early ssbm-q12_late ssbm-q12_continuous ssbm-q13 ssbm-q13_early ssbm-q13_late ssbm-q13_continuous ssbm-q21 ssbm-q21_early ssbm-q21_late ssbm-q21_continuous")
+add_ssbm("ssbm-q11 ssbm-q11_early ssbm-q11_late ssbm-q11_continuous ssbm-q12 ssbm-q12_early ssbm-q12_late ssbm-q13 ssbm-q13_early ssbm-q13_late ssbm-q21 ssbm-q21_early ssbm-q21_late")
