Fix issues with the dynamic use of AN coding parameters important note on dense_hash_map : the width of the data type is the major impact on throughput for push and probe First try to reduce the overall compilation time   * add column_operators.cpp which does explizit template instantiation Make all ssbm-q**_continuous and _continuous_reenc queries run and produce the same result as the other variants some renamings for consistency

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -15,7 +15,7 @@ MACRO( add_algorithm arg_name arg_path )
     ADD_EXECUTABLE(${arg_name} ${SOURCE_FILES})
     SET_PROPERTY(TARGET ${arg_name} PROPERTY CXX_STANDARD 14)
     SET_PROPERTY(TARGET ${arg_name} PROPERTY CXX_STANDARD_REQUIRED ON)
-    TARGET_LINK_LIBRARIES(${arg_name} v2util v2column_storage v2meta_repository)
+    TARGET_LINK_LIBRARIES(${arg_name} v2util v2column_storage v2column_operators v2meta_repository)
     MESSAGE(STATUS "Add executable ${arg_name}")
 ENDMACRO( add_algorithm )
 
@@ -34,4 +34,4 @@ MACRO(add_ssbm arg_queries)
     ENDFOREACH(Q QUERIES)
 ENDMACRO(add_ssbm)
 
-add_ssbm("ssbm-q11 ssbm-q11_early ssbm-q11_late ssbm-q11_continuous ssbm-q12 ssbm-q12_early ssbm-q12_late ssbm-q12_continuous ssbm-q13 ssbm-q13_early ssbm-q13_late ssbm-q13_continuous ssbm-q21 ssbm-q21_early ssbm-q21_late ssbm-q21_continuous")
+add_ssbm("ssbm-q11 ssbm-q11_early ssbm-q11_late ssbm-q11_continuous ssbm-q11_continuous_reenc ssbm-q12 ssbm-q12_early ssbm-q12_late ssbm-q12_continuous ssbm-q12_continuous_reenc ssbm-q13 ssbm-q13_early ssbm-q13_late ssbm-q13_continuous ssbm-q13_continuous_reenc ssbm-q21 ssbm-q21_early ssbm-q21_late ssbm-q21_continuous ssbm-q21_continuous_reenc")
