change cmake scripts to use G++-6 run.sh : adapt to additional continuous-with-reencode benchmarks

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -2,6 +2,9 @@
 
 CMAKE_MINIMUM_REQUIRED(VERSION 3.1 FATAL_ERROR)
 
+SET(CMAKE_C_COMPILER_INIT gcc-6)
+SET(CMAKE_CXX_COMPILER_INIT g++-6)
+
 IF(POLICY CMP0048)
     CMAKE_POLICY(SET CMP0048 NEW)
     PROJECT(V2LIB VERSION 0.5 LANGUAGES CXX)
