Let's try it with a single shared lib. This decreases all binaries' sizes and there seems to be no real difference to the static libs adapt netbeans Project adapt eval script:   * Verification now takes the VARIANTS list into account, as well, which slightly changes its output   * Verification also checks the queries' ".err" files which must also be the same. In particular, this checks for SSB query 2.1, whether the real output is the same (formerly, there was only the number of tuples in the result)

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -13,15 +13,15 @@ ELSE()
 ENDIF()
 
 MACRO( add_static_lib arg_name arg_source_files arg_dep_libs )
-    SET(LIBNAME "v2${arg_name}")
+    SET(LIBNAME "${arg_name}")
 
-    STRING(REPLACE " " ";" TMP_SOURCE_FILES "${arg_source_files}")
-    FOREACH(f ${TMP_SOURCE_FILES})
-        LIST(APPEND SOURCE_FILES "${arg_name}/${f}")
-    ENDFOREACH(f TMP_SOURCE_FILES)
+    STRING(REPLACE " " ";" SOURCE_FILES "${arg_source_files}")
+    #FOREACH(f ${TMP_SOURCE_FILES})
+    #    LIST(APPEND SOURCE_FILES "${arg_name}/${f}")
+    #ENDFOREACH(f TMP_SOURCE_FILES)
 
     MESSAGE(STATUS "Add static library ${LIBNAME}")
-    ADD_LIBRARY(${LIBNAME} STATIC ${SOURCE_FILES})
+    ADD_LIBRARY(${LIBNAME} SHARED ${SOURCE_FILES})
     SET_PROPERTY(TARGET ${LIBNAME} PROPERTY CXX_STANDARD 14)
     SET_PROPERTY(TARGET ${LIBNAME} PROPERTY CXX_STANDARD_REQUIRED ON)
     TARGET_LINK_LIBRARIES(${LIBNAME} ffi dl pthread curses boost_system boost_filesystem)
@@ -29,7 +29,8 @@ ENDMACRO( add_static_lib )
 
 MESSAGE("Generating make scripts for ${PROJECT_NAME} in ${CMAKE_BUILD_TYPE} mode")
 
-add_static_lib(util "resilience.cpp rss.cpp stopwatch.cpp v2types.cpp argumentparser.cpp" "")
-add_static_lib(column_storage "BucketManager.cpp ColumnManager.cpp Transaction.cpp TransactionManager.cpp" "v2util")
-add_static_lib(column_operators "Operators.cpp" "v2util v2column_storage")
-add_static_lib(meta_repository "MetaRepositoryManager.cpp" "v2util v2column_storage, v2column_operators")
+#add_static_lib(util "resilience.cpp rss.cpp stopwatch.cpp v2types.cpp argumentparser.cpp" "")
+#add_static_lib(column_storage "BucketManager.cpp ColumnManager.cpp Transaction.cpp TransactionManager.cpp" "v2util")
+#add_static_lib(column_operators "Operators.cpp" "v2util v2column_storage")
+#add_static_lib(meta_repository "MetaRepositoryManager.cpp" "v2util v2column_storage, v2column_operators")
+add_static_lib(v2core "util/resilience.cpp util/rss.cpp util/stopwatch.cpp util/v2types.cpp util/argumentparser.cpp column_storage/BucketManager.cpp column_storage/ColumnManager.cpp column_storage/Transaction.cpp column_storage/TransactionManager.cpp column_operators/Operators.cpp meta_repository/MetaRepositoryManager.cpp" "")
