start to change name to R-Store (Resilient Store)

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -19,9 +19,9 @@ SET(CMAKE_CXX_COMPILER_INIT g++-6)
 
 IF(POLICY CMP0048)
     CMAKE_POLICY(SET CMP0048 NEW)
-    PROJECT(V2LIB VERSION 0.5 LANGUAGES CXX)
+    PROJECT(RSTORELIB VERSION 0.6 LANGUAGES CXX)
 ELSE()
-    PROJECT(V2LIB LANGUAGES CXX)
+    PROJECT(RSTORELIB LANGUAGES CXX)
 ENDIF()
 
 MACRO( add_static_lib arg_name arg_source_files arg_dep_libs )
