--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,9 +19,9 @@ SET(CMAKE_CXX_COMPILER_INIT g++-6)
 
 IF(POLICY CMP0048)
     CMAKE_POLICY(SET CMP0048 NEW)
-    PROJECT(V2ROOT VERSION 0.5 LANGUAGES CXX)
+    PROJECT(RSTOREROOT VERSION 0.6 LANGUAGES CXX)
 ELSE()
-    PROJECT(V2ROOT LANGUAGES CXX)
+    PROJECT(RSTOREROOT LANGUAGES CXX)
 ENDIF()
 
 MESSAGE("V2 root CMAKE script. Including lib and build:")
