update cmake project files   * use name R-Store (Resilience-Store)   * remove double "-march=native"   * correctly inform about creating shared libraries and not static libraries added update BATs (and TempBATs and ColumnBATs) to provide a *projected* consumption which takes into account only the required amount of bits (to see how much we would save when working on bit-packed values)   * required to modify the dmr_(seq|mt) queries for the initial doubling of the queries add TypeMaps for v2_(fixed|char|id|size)_t all SSB-queries (ssbm):   * move some variable declarations into a macro, which eases adding new ones like the projected consumption to all queries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,19 +19,19 @@ SET(CMAKE_CXX_COMPILER_INIT g++-6)
 
 IF(POLICY CMP0048)
     CMAKE_POLICY(SET CMP0048 NEW)
-    PROJECT(RSTOREROOT VERSION 0.6 LANGUAGES CXX)
+    PROJECT(RSTORE VERSION 0.6 LANGUAGES CXX)
 ELSE()
-    PROJECT(RSTOREROOT LANGUAGES CXX)
+    PROJECT(RSTORE LANGUAGES CXX)
 ENDIF()
 
-MESSAGE("V2 root CMAKE script. Including lib and build:")
+MESSAGE("RSTORE root CMAKE script. Including lib and build:")
 
 #set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/build)
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 set(PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
 
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native -Wall -Wextra -pedantic -Weffc++ -march=native -fexceptions -fnon-call-exceptions")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native -Wall -Wextra -pedantic -Weffc++ -fexceptions -fnon-call-exceptions")
 #SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -DDEBUG -rdynamic -g")
 #SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -DNDEBUG")
 # see
